HAPPY-153: Track thumb visibility fixed

--- a/wildbook-war/src/main/less/material-design-overrides.less
+++ b/wildbook-war/src/main/less/material-design-overrides.less
@@ -46,7 +46,7 @@ md-dialog md-toolbar h2{
 
 /* date && time */
 #encounter-edit .material-datepicker .md-datepicker-input-container{
-    margin-top:25px;  	
+    margin-top:25px;
 }
 
 .blue-border {
@@ -76,10 +76,10 @@ md-dialog md-toolbar h2{
 }
 
 //turn off spinner
-#customTime input[type=number]::-webkit-inner-spin-button, 
-#customTime input[type=number]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
-  margin: 0; 
+#customTime input[type=number]::-webkit-inner-spin-button,
+#customTime input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 //border bottom 0
@@ -90,4 +90,9 @@ md-dialog md-toolbar h2{
 //no icon border on focus
 .noOutline {
     outline: -webkit-focus-ring-color auto 0px;
+}
+
+//table overflow for slider
+md-tabs.overflow-visible md-tab-content.md-no-scroll {
+    overflow:visible;
 }
